@@ -1,3 +1,13 @@
+2024-02-25  Jose E. Marchesi  <jemarch@gnu.org>
+
+	* common/pk-utils.c (pk_str_concat): Assert that first argument
+	shall not be NULL.
+	* poke/poke.c (initialize_user): Take care to not use HOME if it
+	is not defined.
+	* libpoke/pvm.c: Include assert.h.
+	* libpoke/ios-dev-sub.c: Likewise.
+	* poke/pk-ios.c: Likewise.
+
 2024-02-23  Jose E. Marchesi  <jemarch@gnu.org>
 
 	* configure.ac: Support --{enable,disable}-{poked,pokefmt} and
